--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = axtls/axtls
 	url = https://github.com/SuperHouse/axtls.git
 
+[submodule "extras/mqtt_embed_c/mqtt"]
+	path = extras/mqtt_embed_c/mqtt
+	url = https://git.eclipse.org/r/paho/org.eclipse.paho.mqtt.embedded-c
